--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chama Management System - Digital Chama & SHG Management</title>
-    <meta name="description" content="Complete digital solution for managing Chama and Self-Help Group operations including members, contributions, loans, dividends, and financial reporting." />
-    <meta name="author" content="Chama Management System" />
+    <title>Kamandoto SHG Management System - Digital SHG Management</title>
+    <meta name="description" content="Complete digital solution for managing Kamandoto Self-Help Group operations including members, contributions, loans, and financial reporting." />
+    <meta name="author" content="Kamandoto SHG Management System" />
 
-    <meta property="og:title" content="Chama Management System - Digital Chama & SHG Management" />
-    <meta property="og:description" content="Complete digital solution for managing Chama and Self-Help Group operations including members, contributions, loans, dividends, and financial reporting." />
+    <meta property="og:title" content="Kamandoto SHG Management System - Digital SHG Management" />
+    <meta property="og:description" content="Complete digital solution for managing Kamandoto Self-Help Group operations including members, contributions, loans, and financial reporting." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
